# name: TestPushStatus.test[uvloop-None]
  <class 'dict'> {
    'error': None,
    'progress': 23,
    'stage': 'build',
    'state': 'running',
    'step_description': None,
    'step_name': None,
    'timestamp': '2015-10-06T20:00:00Z',
  }
---
# name: TestPushStatus.test_bad_state[uvloop]
  <class 'dict'> {
    'errors': <class 'dict'> {
      'state': <class 'list'> [
        'unallowed value bad',
      ],
    },
    'id': 'invalid_input',
    'message': 'Invalid input',
  }
---
# name: TestPushStatus.test_error[uvloop-invalid-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-invalid-valid]
  <class 'tuple'> (
    201,
    <class 'dict'> {
      'error': <class 'dict'> {
        'details': <class 'list'> [
          'Valid',
        ],
        'traceback': <class 'list'> [
          'Valid',
        ],
        'type': 'KeyError',
      },
      'progress': 14,
      'stage': 'fastqc',
      'state': 'error',
      'step_description': None,
      'step_name': None,
      'timestamp': '2015-10-06T20:00:00Z',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-invalid-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-invalid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-missing-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'required field',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-invalid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-invalid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-invalid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-missing-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-missing-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-missing-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-valid-invalid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'must be of string type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-valid-missing]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
            'type': <class 'list'> [
              'required field',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_error[uvloop-valid-valid-valid]
  <class 'tuple'> (
    422,
    <class 'dict'> {
      'errors': <class 'dict'> {
        'error': <class 'list'> [
          <class 'dict'> {
            'details': <class 'list'> [
              'must be of list type',
            ],
            'traceback': <class 'list'> [
              'must be of list type',
            ],
          },
        ],
      },
      'id': 'invalid_input',
      'message': 'Invalid input',
    },
  )
---
# name: TestPushStatus.test_missing_error[uvloop]
  <class 'tuple'> (
    400,
    <class 'dict'> {
      'id': 'bad_request',
      'message': 'Missing error information',
    },
  )
---
# name: TestPushStatus.test_name_and_description[uvloop]
  <class 'dict'> {
    'error': None,
    'progress': 14,
    'stage': 'fastqc',
    'state': 'running',
    'step_description': 'Run FastQC on the raw data',
    'step_name': 'FastQC',
    'timestamp': '2015-10-06T20:00:00Z',
  }
---
# name: test_acquire[uvloop-None]
  <class 'dict'> {
    'acquired': True,
    'archived': False,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'key': 'key',
    'ping': None,
    'progress': 3,
    'rights': <class 'dict'> {
    },
    'stage': None,
    'state': 'preparing',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 1,
        'stage': 'import_results',
        'state': 'complete',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 3,
        'stage': None,
        'state': 'preparing',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'build_index',
  }
---
# name: test_archive[uvloop-None]
  <class 'dict'> {
    'acquired': False,
    'archived': True,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'ping': None,
    'progress': 1,
    'rights': <class 'dict'> {
    },
    'stage': 'import_results',
    'state': 'complete',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 1,
        'stage': 'import_results',
        'state': 'complete',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'build_index',
  }
---
# name: test_bulk_archive[uvloop-None]
  <class 'list'> [
    <class 'dict'> {
      'archived': True,
      'created_at': '2019-03-07T23:20:30Z',
      'id': '7467tozj',
      'progress': 95,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'bob',
        'id': 'test',
      },
      'workflow': 'build_index',
    },
    <class 'dict'> {
      'archived': True,
      'created_at': '2017-09-21T03:00:07Z',
      'id': '8cy4mjvp',
      'progress': 97,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'bob',
        'id': 'test',
      },
      'workflow': 'build_index',
    },
    <class 'dict'> {
      'archived': True,
      'created_at': '2024-08-23T20:27:15Z',
      'id': '8vvqvnuk',
      'progress': 90,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'bob',
        'id': 'test',
      },
      'workflow': 'nuvs',
    },
    <class 'dict'> {
      'archived': True,
      'created_at': '2021-08-30T04:32:27Z',
      'id': 'awvuon9b',
      'progress': 66,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'bob',
        'id': 'test',
      },
      'workflow': 'pathoscope',
    },
    <class 'dict'> {
      'archived': True,
      'created_at': '2023-02-28T08:11:58Z',
      'id': 'sk1wj693',
      'progress': 82,
      'stage': None,
      'state': 'waiting',
      'user': <class 'dict'> {
        'administrator': False,
        'handle': 'bob',
        'id': 'test',
      },
      'workflow': 'create_sample',
    },
  ]
---
# name: test_cancel[uvloop-None]
  <class 'dict'> {
    'acquired': False,
    'archived': False,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'ping': None,
    'progress': 0,
    'rights': <class 'dict'> {
    },
    'stage': 'mk_analysis_dir',
    'state': 'running',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'build_index',
  }
---
# name: test_delete[uvloop-None]
  <class 'dict'> {
    'removed': <class 'list'> [
      '4c530449',
    ],
  }
---
# name: test_delete[uvloop-complete]
  <class 'dict'> {
    'removed': <class 'list'> [
      '4c530449',
    ],
  }
---
# name: test_delete[uvloop-failed]
  <class 'dict'> {
    'removed': <class 'list'> [
    ],
  }
---
# name: test_delete[uvloop-finished]
  <class 'dict'> {
    'removed': <class 'list'> [
      '4c530449',
    ],
  }
---
# name: test_find_beta[uvloop-None-None-False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2025-08-31T21:25:22Z',
        'id': 'fczq56va',
        'progress': 100,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2024-08-22T18:08:27Z',
        'id': '8vvqvnuk',
        'progress': 90,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2024-05-31T18:03:22Z',
        'id': 't894ea8p',
        'progress': 94,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2023-02-26T20:43:23Z',
        'id': 'sk1wj693',
        'progress': 82,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2021-08-28T19:55:40Z',
        'id': 'awvuon9b',
        'progress': 66,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2019-08-20T07:38:55Z',
        'id': '5k9d4ocj',
        'progress': 97,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2019-03-06T19:40:07Z',
        'id': '7467tozj',
        'progress': 95,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-12-20T22:49:01Z',
        'id': 'bhjlnu44',
        'progress': 100,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-09-19T15:00:31Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
    ],
    'found_count': 9,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-None-None-None]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2025-08-31T21:25:22Z',
        'id': 'fczq56va',
        'progress': 100,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2024-08-22T18:08:27Z',
        'id': '8vvqvnuk',
        'progress': 90,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2024-05-31T18:03:22Z',
        'id': 't894ea8p',
        'progress': 94,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2024-03-13T11:48:20Z',
        'id': '3cvzfiqz',
        'progress': 85,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2023-02-26T20:43:23Z',
        'id': 'sk1wj693',
        'progress': 82,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2021-08-28T19:55:40Z',
        'id': 'awvuon9b',
        'progress': 66,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2021-04-11T17:06:04Z',
        'id': 'v68r5j2t',
        'progress': 81,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2019-08-30T17:41:05Z',
        'id': 'wrw4i0eh',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'aodp',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2019-08-20T07:38:55Z',
        'id': '5k9d4ocj',
        'progress': 97,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2019-04-24T16:02:53Z',
        'id': 'w4cckpcq',
        'progress': 51,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2019-03-06T19:40:07Z',
        'id': '7467tozj',
        'progress': 95,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-12-20T22:49:01Z',
        'id': 'bhjlnu44',
        'progress': 100,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-09-19T15:00:31Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2017-08-03T02:15:04Z',
        'id': 'zc7h2ftd',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2016-03-23T13:37:46Z',
        'id': '4jua0mbk',
        'progress': 99,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
    ],
    'found_count': 15,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-None-None-True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': True,
        'created_at': '2024-03-13T11:48:20Z',
        'id': '3cvzfiqz',
        'progress': 85,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2021-04-11T17:06:04Z',
        'id': 'v68r5j2t',
        'progress': 81,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2019-08-30T17:41:05Z',
        'id': 'wrw4i0eh',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'aodp',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2019-04-24T16:02:53Z',
        'id': 'w4cckpcq',
        'progress': 51,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2017-08-03T02:15:04Z',
        'id': 'zc7h2ftd',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2016-03-23T13:37:46Z',
        'id': '4jua0mbk',
        'progress': 99,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
    ],
    'found_count': 6,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-None-running-False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2025-08-31T21:25:22Z',
        'id': 'fczq56va',
        'progress': 100,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-09-19T15:00:31Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-None-running-None]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2025-08-31T21:25:22Z',
        'id': 'fczq56va',
        'progress': 100,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-09-19T15:00:31Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-None-running-True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-bob-None-False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-bob-None-None]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-bob-None-True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-bob-running-False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-bob-running-None]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-bob-running-True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-users2-None-False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2025-08-31T21:25:22Z',
        'id': 'fczq56va',
        'progress': 100,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2024-08-22T18:08:27Z',
        'id': '8vvqvnuk',
        'progress': 90,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2024-05-31T18:03:22Z',
        'id': 't894ea8p',
        'progress': 94,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2023-02-26T20:43:23Z',
        'id': 'sk1wj693',
        'progress': 82,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2021-08-28T19:55:40Z',
        'id': 'awvuon9b',
        'progress': 66,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2019-08-20T07:38:55Z',
        'id': '5k9d4ocj',
        'progress': 97,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2019-03-06T19:40:07Z',
        'id': '7467tozj',
        'progress': 95,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-12-20T22:49:01Z',
        'id': 'bhjlnu44',
        'progress': 100,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-09-19T15:00:31Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
    ],
    'found_count': 9,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-users2-None-None]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2025-08-31T21:25:22Z',
        'id': 'fczq56va',
        'progress': 100,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2024-08-22T18:08:27Z',
        'id': '8vvqvnuk',
        'progress': 90,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2024-05-31T18:03:22Z',
        'id': 't894ea8p',
        'progress': 94,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2024-03-13T11:48:20Z',
        'id': '3cvzfiqz',
        'progress': 85,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2023-02-26T20:43:23Z',
        'id': 'sk1wj693',
        'progress': 82,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2021-08-28T19:55:40Z',
        'id': 'awvuon9b',
        'progress': 66,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2021-04-11T17:06:04Z',
        'id': 'v68r5j2t',
        'progress': 81,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2019-08-30T17:41:05Z',
        'id': 'wrw4i0eh',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'aodp',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2019-08-20T07:38:55Z',
        'id': '5k9d4ocj',
        'progress': 97,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2019-04-24T16:02:53Z',
        'id': 'w4cckpcq',
        'progress': 51,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2019-03-06T19:40:07Z',
        'id': '7467tozj',
        'progress': 95,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-12-20T22:49:01Z',
        'id': 'bhjlnu44',
        'progress': 100,
        'stage': 'first',
        'state': 'complete',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-09-19T15:00:31Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2017-08-03T02:15:04Z',
        'id': 'zc7h2ftd',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2016-03-23T13:37:46Z',
        'id': '4jua0mbk',
        'progress': 99,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
    ],
    'found_count': 15,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-users2-None-True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': True,
        'created_at': '2024-03-13T11:48:20Z',
        'id': '3cvzfiqz',
        'progress': 85,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2021-04-11T17:06:04Z',
        'id': 'v68r5j2t',
        'progress': 81,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_subtraction',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2019-08-30T17:41:05Z',
        'id': 'wrw4i0eh',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'aodp',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2019-04-24T16:02:53Z',
        'id': 'w4cckpcq',
        'progress': 51,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'nuvs',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2017-08-03T02:15:04Z',
        'id': 'zc7h2ftd',
        'progress': 100,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': True,
        'created_at': '2016-03-23T13:37:46Z',
        'id': '4jua0mbk',
        'progress': 99,
        'stage': 'first',
        'state': 'cancelled',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'create_sample',
      },
    ],
    'found_count': 6,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-users2-running-False]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2025-08-31T21:25:22Z',
        'id': 'fczq56va',
        'progress': 100,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-09-19T15:00:31Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-users2-running-None]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
      <class 'dict'> {
        'archived': False,
        'created_at': '2025-08-31T21:25:22Z',
        'id': 'fczq56va',
        'progress': 100,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'pathoscope',
      },
      <class 'dict'> {
        'archived': False,
        'created_at': '2017-09-19T15:00:31Z',
        'id': '8cy4mjvp',
        'progress': 97,
        'stage': 'second',
        'state': 'running',
        'user': <class 'dict'> {
          'administrator': False,
          'handle': 'bob',
          'id': 'test',
        },
        'workflow': 'build_index',
      },
    ],
    'found_count': 2,
    'page': 1,
    'page_count': 1,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_find_beta[uvloop-users2-running-True]
  <class 'dict'> {
    'counts': <class 'dict'> {
      'cancelled': <class 'dict'> {
        'build_index': 1,
        'create_subtraction': 1,
        'pathoscope': 2,
      },
      'complete': <class 'dict'> {
        'create_sample': 2,
        'nuvs': 1,
      },
      'running': <class 'dict'> {
        'build_index': 1,
        'pathoscope': 1,
      },
    },
    'documents': <class 'list'> [
    ],
    'found_count': 0,
    'page': 1,
    'page_count': 0,
    'per_page': 25,
    'total_count': 15,
  }
---
# name: test_get[uvloop-None]
  <class 'dict'> {
    'acquired': False,
    'archived': False,
    'args': <class 'dict'> {
      'analysis_id': 'e410429b',
      'index_id': '465428b0',
      'name': None,
      'sample_id': '1e01a382',
      'username': 'igboyes',
      'workflow': 'nuvs',
    },
    'created_at': '2015-10-06T20:00:00Z',
    'id': '4c530449',
    'ping': None,
    'progress': 1,
    'rights': <class 'dict'> {
    },
    'stage': 'import_results',
    'state': 'complete',
    'status': <class 'list'> [
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'waiting',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': None,
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 0,
        'stage': 'mk_analysis_dir',
        'state': 'running',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
      <class 'dict'> {
        'error': None,
        'progress': 1,
        'stage': 'import_results',
        'state': 'complete',
        'step_description': None,
        'step_name': None,
        'timestamp': '2015-10-06T20:00:00Z',
      },
    ],
    'user': <class 'dict'> {
      'administrator': False,
      'handle': 'leeashley',
      'id': 'bf1b993c',
    },
    'workflow': 'build_index',
  }
---
# name: test_ping[uvloop-None]
  <class 'dict'> {
    'pinged_at': '2015-10-06T20:00:00Z',
  }
---
